<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="false"
    tools:context=".fragments.AddAreaMapFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <!--android:layout_gravity="bottom"-->

        <ImageView
            android:id="@+id/iv_area_load_preview"
            android:contentDescription="@string/no_preview_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:src="@mipmap/ic_image_placeholder"/>

        <ImageButton
            android:id="@+id/ib_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_take_picture"
            android:contentDescription="@string/take_picture"
            android:layout_below="@+id/iv_area_load_preview"/>

        <ImageButton
            android:id="@+id/ib_select_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_image_placeholder"
            android:contentDescription="@string/select_image"
            android:layout_below="@+id/iv_area_load_preview"
            android:layout_toRightOf="@+id/ib_take_picture"
            android:layout_toEndOf="@+id/ib_take_picture" />

        <EditText
            android:id="@+id/et_area_map_description"
            android:inputType="text"
            android:lines="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brief_description_hint"
            android:layout_below="@+id/ib_take_picture"/>

        <TextView
            android:id="@+id/tv_hint_area_width"
            android:text="@string/area_width_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_area_map_description"/>

        <EditText
            android:id="@+id/et_area_map_width"
            android:inputType="number"
            android:layout_width="@dimen/et_width_for_area_map"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/edit_text_padding_left"
            android:paddingLeft="@dimen/edit_text_padding_left"
            tools:ignore="RtlSymmetry"
            android:layout_below="@+id/et_area_map_description"
            android:layout_toEndOf="@+id/ib_select_picture"
            android:layout_toRightOf="@+id/ib_select_picture" />


        <TextView
            android:id="@+id/tv_hint_area_height"
            android:text="@string/area_height_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_area_map_width"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/et_area_map_height"
            android:inputType="number"
            android:layout_width="@dimen/et_width_for_area_map"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/edit_text_padding_left"
            android:paddingLeft="@dimen/edit_text_padding_left"
            tools:ignore="RtlSymmetry"
            android:layout_below="@+id/et_area_map_width"
            android:layout_alignRight="@+id/et_area_map_width"
            android:layout_alignEnd="@+id/et_area_map_width"
            android:layout_toEndOf="@+id/ib_select_picture"
            android:layout_toRightOf="@+id/ib_select_picture" />

        <TextView
            android:id="@+id/tv_hint_area_floor"
            android:text="@string/area_floor_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_area_map_height"/>

        <EditText
            android:id="@+id/et_area_map_floor"
            android:inputType="number"
            android:layout_width="@dimen/et_width_for_area_map"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/edit_text_padding_left"
            android:paddingLeft="@dimen/edit_text_padding_left"
            android:layout_below="@+id/et_area_map_height"
            tools:ignore="RtlSymmetry"
            android:layout_alignRight="@+id/et_area_map_width"
            android:layout_alignEnd="@+id/et_area_map_width"
            android:layout_toEndOf="@+id/ib_take_picture"
            android:layout_alignLeft="@+id/et_area_map_height"
            android:layout_alignStart="@+id/et_area_map_height"
            android:layout_toRightOf="@+id/ib_take_picture" />

    </RelativeLayout>

</ScrollView>